# 6502-Emulator

./: .gitignore  CMakeLists.txt  Makefile  README.md  compile_commands.json  imgui.ini  main.cpp  out.txt
.cache/clangd/index/: cpu.cpp.BC163560E9BFD15D.idx  cpu.hpp.6A93DF922BC1CD32.idx  main.cpp.C668E52B780E9C0B.idx
bus/: CMakeLists.txt
bus/include/: bus.h  rom.h
bus/src/: bus.cpp
cpu/: CMakeLists.txt
cpu/include/: mos6502.h
cpu/src/: mos6502.cpp
debug/: debugger.cpp  debugger.hpp  window.cpp  window.hpp
include/: bus.hpp  common.hpp  cpu.hpp  debug.hpp  emulator.hpp  memory.hpp  observer.hpp  window.hpp
memory/: CMakeLists.txt
memory/include/: mem.h
memory/src/: mem.cpp
src/: bus.cpp  clock.cpp  clock.hpp  common.hpp  cpu.cpp  cpu.hpp  debug.cpp  emulator.cpp  emulator.hpp  macros.hpp  main.cpp  memory.cpp  memory.hpp  observer.cpp  window.cpp
src/include/: cpu.hpp  window.hpp
testBins/: isr_test.txt  key_input.txt
ui/: CMakeLists.txt
ui/include/: debugger.h  hex_editor.h  window.h
ui/src/: debugger.cpp  hex_editor.cpp  window.cpp
